--- a/findly-builder/src/app/components/faqs/add-alternate-question/add-alternate-question.component.html
+++ b/findly-builder/src/app/components/faqs/add-alternate-question/add-alternate-question.component.html
@@ -27,8 +27,8 @@
         </ng-container>
       </mat-autocomplete>
     </mat-form-field>
-    <div>
-      <button class="kr-sg-button-primary btn_lg mr-3" (click)="addFaq()">Add</button>
+    <div class="hide">
+      <button class="kr-sg-button-primary btn_lg mr-3" id="addAlternateFaq" (click)="addFaq()">Add</button>
       <button class="kr-sg-button-secondary btn_lg" (click)="cancelFaq()">Cancel</button>
     </div>
 </div>
