--- a/findly-builder/src/app/components/faq-source/faq-source.component.html
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.html
@@ -277,8 +277,8 @@
                                         <div class="dropdown dropdown-open">
                                             <button class="dropdown-toggle dropdown-input" ngbDropdownToggle data-toggle="dropdown"><img src="assets/icons/dropdown-arrow.svg"></button>                                            
                                             <ul class="dropdown-menu content-menu faq-filter-add pt-1 pb-1" ngbDropdownMenu>
-                                                <li (click)="updateFaq(selectedFaq,'stateUpdate','in_review')">Move to Review</li>
-                                                <li (click)="updateFaq(selectedFaq,'stateUpdate','draft')">Move to Drafts</li>
+                                                <li (click)="updateFaq(selectedFaq,'stateUpdate','in_review')">Send for Review</li>
+                                                <li (click)="updateFaq(selectedFaq,'stateUpdate','draft')">Needs Rework</li>
                                             </ul>
                                         </div>
                                     </div>                                    
