Full view issue sdk

--- a/findly-builder/src/assets/web-kore-sdk/demo/custom/customFindly.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/custom/customFindly.css
@@ -129,7 +129,7 @@ img.logo-img{
     z-index: 999999;
     padding: 25px 0 0px 60px;
     height: 100%;
-    width: 100%;
+    width: 100% !important;
   }
   .search-container.conversation.full-page .ksa-resultsContainer {
     height: calc(100vh - 120px);
