--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -85,6 +85,20 @@
 			</span>
 			<span class="linkTitle">Synonyms</span>
 		</div>
+		<div mat-button class="mat-button" [routerLink]="['/stopWords']" skipLocationChange routerLinkActive="active" (click)="preview('stopWords')" mat-button>
+			<span class="inlineIconBox leftAdjust">
+				<img src="assets/icons/sidemenu/new-icons/stop-words.svg" class="defaultIcon">	
+				<img src="assets/icons/sidemenu/new-icons/stop-words.svg" class="activeIcon">				
+			</span>
+			<span class="linkTitle">Stop Words</span>
+		</div>
+		<div mat-button class="mat-button" [routerLink]="['/weights']" skipLocationChange routerLinkActive="active" (click)="preview('weights')" mat-button>
+			<span class="inlineIconBox leftAdjust">
+				<img src="assets/icons/sidemenu/new-icons/weights.svg" class="defaultIcon">	
+				<img src="assets/icons/sidemenu/new-icons/weights.svg" class="activeIcon">				
+			</span>
+			<span class="linkTitle">Weights</span>
+		</div>
 		<div mat-button class="mat-button" [routerLink]="['/rules']" skipLocationChange routerLinkActive="active" (click)="preview('synonyms')" mat-button>
 			<span class="inlineIconBox">
 					<img src="assets/icons/sidemenu/new-icons/rules.svg" class="defaultIcon">	
