--- a/findly-builder/src/app/components/synonyms/synonyms.component.scss
+++ b/findly-builder/src/app/components/synonyms/synonyms.component.scss
@@ -47,6 +47,7 @@
      background: #fff;    
      .table-list-content{
          .kr-sg-data-table{
+             display: inline-block;
              .table-action-header{
                  justify-content: flex-start;
                  height: auto;
@@ -95,7 +96,6 @@
             box-sizing: border-box;
             border-radius: 4px;
             justify-content: space-between;
-            display: flex;
             .label_text{
                 font-weight: 500;
                 font-size: 12px;
@@ -108,6 +108,9 @@
                         height: 38px;
                     }
                 }
+            }
+            .chip-sys-data{
+                width: 100%;
             }
             .add-syn-icon{
                 width: 38px;
