--- a/findly-builder/src/app/components/add-source/add-source.component.scss
+++ b/findly-builder/src/app/components/add-source/add-source.component.scss
@@ -1086,8 +1086,10 @@
     }
     ::ng-deep .mat-datepicker-toggle {
         position: absolute;
-        left: 263px;
-        top: 370px;
+        left: 290px;
+        top: 401px;
+       // left: 263px;
+       // top: 370px;
     }
 }
 
