--- a/findly-builder/src/app/components/insights/insights.component.scss
+++ b/findly-builder/src/app/components/insights/insights.component.scss
@@ -236,6 +236,7 @@
     height: 37px;
 }
 .demo-chart-graphMode{
+    top: -22px;
     //height: 100px;
 }
 .insight-menu{
@@ -259,11 +260,74 @@
     height: 100%;
     border: 1px solid #A8C8DD;
     width: 300px;
-    height: 400px;
+    height: 435px;
     border-radius: 5px;
     background: white;
-    .closeCross{
-        float: right;
-        margin: 10px;
+    .header{
+        padding: 10px;
+        .head-txt{
+            font-weight: 500;
+            font-size: 14px;
+        }
+        .closeCross{
+            //margin-left: 270px;
+            cursor: pointer;
+            float: right;
+            //margin: 10px 10px 10px 270px;
+        }
+    }
+    
+    .legends{
+        padding: 12px;
+        position: absolute;
+        top: 381px;
+        .searches{
+            .head{
+                font-weight: 500;
+                font-size: 10px;
+                line-height: 12px;
+                color: #9AA0A6;
+                margin-top: -30px;
+                margin-left: 30px;
+            }
+            .val{
+                font-weight: 500;
+                font-size: 14px;
+                margin-left: 30px;
+            }
+        }
+        .clicks{
+            .head{
+                font-weight: 500;
+                font-size: 10px;
+                line-height: 12px;
+                color: #9AA0A6;
+                margin-top: -30px;
+                margin-left: 30px;
+                
+            }
+            .val{
+                font-weight: 500;
+                font-size: 14px;
+                margin-left: 30px;
+                color: #3368BB;
+            }
+        }
+        .CTR{
+            .head{
+                font-weight: 500;
+                font-size: 10px;
+                line-height: 12px;
+                color: #9AA0A6;
+                margin-top: -30px;
+                margin-left: 30px;
+            }
+            .val{
+                font-weight: 500;
+                font-size: 14px;
+                margin-left: 30px;
+                color: #009DAB;
+            }
+        }
     }
 }
